@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Fix handling of unmapped characters Identity-H encoding
+  - Fix mis-classification of OpenType collections as non-CID fonts.
 
 0.8.10  2024-12-07T08:25:26+13:00
   - Add file attribute to font objects.
